appId: tech.jala.android.lite
---
- launchApp
- tapOn: "Masuk"
- tapOn: "Masuk dengan No HP atau Email"
- tapOn: 
    text: "No. Handphone atau Email"
    index: 1
- inputText: "jala.automation@gmail.com"
- tapOn:
    text: "Kata Sandi"
    index: 1
- inputText: "jalaistimewa"
- tapOn:
    text: "Masuk"
- tapOn: 
    text: "Masuk"
    index: 1
