appId: tech.jala.android.lite
---
- clearstate
- launchApp

- runFlow: login_email.yaml

## Langsung skip ke step setelah login selesai 

- tapOn: 
    point: 235, 681 ## pick kolam ##
- tapOn: "A1" ## klik kolam A1##
- tapOn: "Pakan"
- tapOn: "Anco" ## klik pakan ##
- tapOn: 
    point: 311, 1155 ##catatan##
- tapOn:
    point: 314, 500 ## pilih tanggal pakan##
- tapOn: 
    point: 91, 1150 ## pilih tanggal 12 Agustus##
- tapOn: 
    point: 300, 613 ## jam pemberian Pakan##
- tapOn: 
    point: 90, 1150 ## 12 kg## 
- scroll
- scroll
- scroll
- scroll
- scroll
- tapOn: 
    point: 315, 970
- inputText: "Test Anco Habis"
- tapOn: "Simpan"
- extendedWaitUntil:
    visible: "Anco"
    timeout: 10000 ##10 det##

- tapOn: 
    point: 564, 372
- tapOn:
    text: "Sisa Sedikit"
    index: 0
- scroll
- tapOn:
    text: "Sisa Banyak"
    index: 1
- tapOn:
    text: "Sisa Banyak"
    index: 2
- tapOn:
    text: "Sisa Sedikit"
    index: 3

- tapOn: "Simpan"
- extendedWaitUntil:
    visible: "Anco"
    timeout: 10000 ##10 det##

- tapOn:
    point: 564, 372 
- tapOn: "Hapus"
- tapOn: "Ya, Saya Yakin"

- extendedWaitUntil:
    visible: "Belum ada data tersimpan"
    timeout: 10000 ##10 det##

- assertVisible: 
    visible: "Belum ada data tersimpan"