appId: tech.jala.android.lite
---
- clearstate
- launchApp

- runflow: login_email.yaml

#pilih menu kolam
- tapOn:
    point: 235, 681

#pilih field Automation Flutter
- tapOn:
    point: 150,220
 
- tapOn: "A1"
- tapOn: "Sampling"
- tapOn: "Panen"
- tapOn: 
    text: "Catatan"
- tapOn: "Pilih Jenis Panen"
- tapOn: "Parsial"

- tapOn: 
    text: "-"
    index: 0
- inputText: 
    text: "400"
    label: "Ketik 400"

- hideKeyboard

- tapOn: 
    text: "-"
    index: 1
- inputText: 
    text: "100"
    label: "Ketik 100"

- hideKeyboard

- tapOn: 
    text: "-"
    index: 2
- inputText: 
    text: "45000"
    label: "Ketik 45000"

- hideKeyboard

-  scrollUntilVisible:
    element:
      text: "Catatan" # or any other selecto
      direction: DOWN
      index: 1

- tapOn: 
    text: "Pembeli"
- inputText: 
    text: "JALA"
    label: "Ketik JALA"
    index: 1

- tapOn: 
    text: "Catatan"
- inputText: 
    text: "Test automation"
    label: "Test automation"
    index: 1
- tapOn: "Simpan"

# tap icon edit
- tapOn:
    point: 555,287

- tapOn: 
    text: "-"
    index: 0
- inputText: 
    text: "375"
    label: "Ketik 375"

- hideKeyboard

- tapOn: 
    text: "-"
    index: 1
- inputText: 
    text: "95"
    label: "Ketik 95"

- hideKeyboard

- tapOn: 
    text: "-"
    index: 2
- inputText: 
    text: "47500"
    label: "Ketik 47500"

- hideKeyboard

- tapOn: "Simpan"

-  scrollUntilVisible:
    element:
      text: "Catatan" # or any other selecto
      direction: DOWN
      index: 1

# tap icon edit
- tapOn:
    point: 555,287

- tapOn:
    text: "Hapus"

- tapOn: "Ya, Saya Yakin"









