ppId: tech.jala.android.lite
---
- clearstate
- launchApp

- runflow: login_email.yaml

#pilih menu kolam
- tapOn:
    point: 235, 681

- tapOn: "A1"
- tapOn: "Sampling"
- tapOn: "Perlakuan"
- tapOn: 
    text: "Catatan"
- tapOn:
    text: "Catatan Tertulis"

- tapOn: 
    text: "Perlakuan"
    index: 1
- inputText:
    text: "Saprotam 2,5kg"
    label: "Ketik Saprotam 2,5kg"

- hideKeyboard

- tapOn: 
    text: "Catatan"
    index: 1
- inputText:
    text: "test pemberian Perlakuan"
    label: "test pemberian perlakuan"

- hideKeyboard

- tapOn: "Simpan"

  #Pilih icon [edit] pada data current date
- tapOn:
    point: 548,282

- tapOn: 
    text: "Perlakuan"
    index: 1
- inputText:
    text: "Kapur Tohor 100gr"
    label: "Ketik Kapur Tohor 100gr"

- hideKeyboard

- tapOn: 
    text: "Catatan"
    index: 1
- inputText:
    text: "ubah pemberian Perlakuan"
    label: "ubah pemberian perlakuan"

- hideKeyboard

- tapOn: "Simpan"

# Tap icon edit
- tapOn:
    point: 548,282

- tapOn:
    text: "Hapus"

- tapOn: "Ya, Saya Yakin"






  