appId: tech.jala.android.lite
---
- clearstate
- launchApp

- runflow: login_email.yaml

#pilih menu kolam
- tapOn:
    point: 235, 681

#pilih field Automation Flutter
- tapOn: 
    point:
- tapOn: "A1"
- tapOn: "Sampling"
- tapOn: 
    text: "Catatan"
-  scrollUntilVisible:
    element:
      text: "Catatan" # or any other selecto
      direction: DOWN
      index: 1
- tapOn: 
    text: "Catatan"
    label: "Masukkan Catatan Test data sampling"
- inputText: 
    text: "Test data sampling"
    label: "Ketik test data sampling" 

- hideKeyboard

- tapOn: 
    text: "0"
    label: "Masukkan field MBW 1,15"
- inputText: 
    text: "1,15"
    label: "Ketik 1,15"

- hideKeyboard 

- tapOn: "Simpan"

#Pilih icon [edit] pada data current date
- tapOn:
    point: 548,282
- tapOn: 
    text: "Catatan"
-  scrollUntilVisible:
    element:
      text: "Catatan" # or any other selecto
      direction: DOWN
      index: 1
- tapOn: 
    text: " Catatan"
    label: "Masukkan Catatan edit data testing"
- inputText: 
    text: "edit data sampling"
    label: "Ketik edit data sampling" 

- hideKeyboard

 # Input field 'MBW' = 0,75
- tapOn: 
    text: "0"
    label: "Masukkan field MBW 0,75"
- inputText: 
    text: "0,75"
    label: "Ketik 0,75"

- hideKeyboard 
- tapOn: "Simpan"

#Pilih icon [edit] pada data current date
- tapOn:
    point: 548,282

- tapOn:
    text: "Hapus"

# Tap Ya, Saya Yakin
- tapOn: "Ya, Saya Yakin"

