appId: tech.jala.android.lite
name: create_tambak_template_kolam
tags:
  - prerequisite
---
- clearState
- launchApp
- runFlow: login_email.yaml

- tapOn:
    point: 297,197 #point field tambak~
    label: "Tap Field Tambak"

- tapOn:
    text: "Tambah Tambak"

- tapOn:
    text: "contoh: Vaname Indonesia"
    label: "Tap Field Tambak"
- inputText: "Test Automation"
- hideKeyboard

- tapOn:
    text: "Pilih provinsi"

- tapOn:
    text: "DI YOGYAKARTA"
    
- tapOn:
    text: "Pilih kota/kabupaten"

- tapOn:
    text: "BANTUL"

- tapOn:
    text: "Pilih kecamatan"

- tapOn:
    text: "PAJANGAN"

- tapOn:
    text: "Kelurahan"

- tapOn:
    text: "TRIWIDADI"

- scrollUntilVisible:
    element: 
      text: "Zona Waktu"
    direction: down
- scroll

- tapOn:
    text: "Masukan alamat tambak Anda"
    label: "Isi field alamat"
- inputText: "Kampung Nelayan Pantai Samas"
- hideKeyboard

- tapOn:
    text: "Indonesian Rupiah (IDR)"

- tapOn:
    text: "Indonesian Rupiah (IDR)"

- tapOn:
    text: "Buat Tambak"
    retryTapIfNoChange: false

- waitForAnimationToEnd:
    timeout: 2000

- extendedWaitUntil:
    notVisible: 
        text: "Buat Tambak" # or any other selector
    timeout: 2000

## Assert data
- assertVisible: "Buat Kolam"
- assertVisible: "Kembali ke Menu Utama"

- stopApp
#REVISI
  


  

  





  


