appId: tech.jala.android.lite
---
- clearState
- launchApp

- runFlow: login_email.yaml


#Create Tambak
- tapOn:
    point: 301, 195 #Field Pilih Tambak

- tapOn:
    text: "Tambah Tambak"

- tapOn:
    text: "contoh: Vaname Indonesia"
    label: "Tap Field Tambak"
- inputText: "Test Automation"

- tapOn:
    text: "Pilih provinsi"

- tapOn:
    text: "DI YOGYAKARTA"
    
- tapOn:
    text: "Pilih kota/kabupaten"

- tapOn:
    text: "BANTUL"

- tapOn:
    text: "Pilih kecamatan"

- tapOn:
    text: "PAJANGAN"

- tapOn:
    text: "Kelurahan"

- tapOn:
    text: "TRIWIDADI"

- scrollUntilVisible:
    element: 
      text: "Zona Waktu"
    direction: down
    label: "Scroll sampai bawah"

- tapOn:
    text: "Masukan alamat tambak Anda"
    label: "Isi field alamat"
- inputText: "Kampung Nelayan Pantai Samas"

- tapOn:
    text: "Indonesian Rupiah (IDR)"

- tapOn:
    text: "Indonesian Rupiah (IDR)"

- tapOn:
    text: "Buat Tambak"

## Assert data Create
- assertVisible: 
    text: "Tambak Berhasil Dibuat"

- assertVisible:
    text: "Kembali ke Menu Utama"

# Read Data
- tapOn: "Kembali ke Menu Utama"

- tapOn: 
    point: 238, 689 #Kolam

- tapOn:
    point: 300, 215 #Pilih field tambak

- tapOn:
    text: "Test Automation"

- tapOn:
    point: 573, 81 #

# Assert Data Read
- assertVisible: "Test Automation"
- assertVisible: "DI YOGYAKARTA"
- assertVisible: "BANTUL"
- assertVisible: "PAJANGAN"
- assertVisible: "TRIWIDADI"
- scrollUntilVisible:
    element: 
      text: "Zona Waktu"
    direction: down

- assertVisible: "Indonesian Rupiah (IDR)"

- tapOn: "Kembali"
- tapOn: "Kembali"

# Edit data tambak
- tapOn:
    point: 238, 689 #Kolam

- tapOn:
    point: 300, 215 #Pilih field tambak

- tapOn:
    text: "Test Automation"

- tapOn:
    point: 573, 81 #Tombol Gear Kanan Atas

- tapOn:
    point: 279, 334 #Tap Field Luas
- inputText: "10000"

- tapOn:
    text: "DI YOGYAKARTA"
    label: "Ubah Field Provinsi"

- tapOn: "Jawa Tengah"

- tapOn: "Pilih kota/kabupaten"

- tapOn: "CILACAP"

- tapOn: "Pilih kecamatan"

- tapOn: "cari"

- inputText: "Wanareja"
- tapOn: "WANAREJA"

- hideKeyboard

- tapOn: 
    text: "Kelurahan"
    label: Pilih Kelurahan
- tapOn: 
    text: "TAMBAKSARI"
    label: "Pilih Kelurahan Tambaksari"

- tapOn: "Simpan"

## ASSERT DATA EDIT
- assertVisible: "Tambak Sukses Disimpan"
- assertVisible: "Tambak yang Anda ubah telah disimpan."


##Delete data tambak
- tapOn: "Kembali ke Menu Utama"
- tapOn: 
    point: 238, 689 #Kolam
- tapOn: 
    point: 573, 81 #Tombol gear kanan atas

- tapOn: "Hapus"
- tapOn: "Ya, Saya Yakin"
- assertVisible: "Tambak Berhasil Dihapus"

- stopApp



















  
  

  





  


