appId: tech.jala.android.lite
name: AT16
tags:
  - AT16
---
- clearState
- launchApp


## [READ]~
- runFlow: login_email.yaml

#Bugfix
- tapOn:
    text: "Lite"
    repeat: 3
    delay: 5000


- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms




#########################
- waitForAnimationToEnd:
    timeout: 2000
#########################
- tapOn:
    text: "Kolam"
    index: 0
    repeat: 3
    delay: 2000

- tapOn: 
    point: 306, 218 #Pilih field tambak
- tapOn: 
    text: "Test Automation"
    delay: 2000
    
- tapOn:
    text: "Kolam"
    index: 0
    repeat: 3
    delay: 2000

- tapOn:
    point: 544,379

##ASSERT DATA
- assertVisible: "AUT2.1"
- assertVisible: "120"
- assertVisible: "1,5"

- stopApp

    


















  
  

  





  


