appId: tech.jala.android.lite
name: AT17
tags:
  - AT17
---
- clearState
- launchApp

# 1. Login akun jala.automation~
- runFlow: login_email.yaml
#Bugfix
- tapOn:
    text: "Lite"
    repeat: 3
    delay: 5000

# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms




#########################
- waitForAnimationToEnd:
    timeout: 2000
#########################
# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
- tapOn: "Test Automation"
# 4. Pilih tombol gear pada card nama kolam
- tapOn:
    point: 544,379
# 5. Ubah field 'Panjang' = "11"
- tapOn:
    point: 170,546
- eraseText
- inputText: "11"
# 6. Ubah field 'Lebar' = "13"
- tapOn:
    point: 453,551
- eraseText
- inputText: "13"
- hideKeyboard
# 7. Ubah field 'Anco' = "2"
- tapOn: 
    text: "4" 
    label: "Pick untuk jumlah ubah field ANCO"
- tapOn: "2"
# 8. Pilih tombol [Simpan]
- tapOn: "Simpan"

##ASSERT DATA NANTI  MASUKKAN KESINI

- stopApp
#REVISIuhuy


















  
  

  





  


