appId: tech.jala.android.lite
name: AT18
tags:
  - AT18
---
- clearState
- launchApp
    
# 1. Login akun jala.automation~
- runFlow: login_email.yaml
#Bugfix
- tapOn:
    text: "Lite"
    repeat: 3
    delay: 5000

# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 2000 # ms




#########################
- waitForAnimationToEnd:
    timeout: 2000
#########################
# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
- tapOn: "Test Automation"
# 4. Pilih icon Gear pada card kolam
- tapOn:
    point: 544,379
# 5. Pilih tombol [Hapus]
- tapOn: "Hapus"
# 6. Pilih tombol [Ya] pada modal konfirmasi
- tapOn: "Ya, Saya Yakin"

###Assert Data NANTI MASUKKAN KESINI

- stopApp
#REVISIaku


















  
  

  





  


