appId: tech.jala.android.lite
name: AT21
tags:
  - AT21
---
- clearState
- launchApp

## [CREATE]
# 1. Login akun jala.automationa
- runFlow: login_email.yaml



#Bugfix
- tapOn:
    text: "Lite"
    repeat: 3
    delay: 5000





# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 5000 # ms




#########################
- waitForAnimationToEnd:
    timeout: 5000
#########################




# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
- tapOn: "Test Automation"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 288, 414

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 566, 79

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: "Pengaturan Siklus"

#Edit data Total Tebar
- tapOn: "100000"
- eraseText
- inputText: "120000"

- scrollUntilVisible:
    element:
      text: "Target dan informasi siklus"
    direction: DOWN 
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"
#Edit data Harga Pakan
- tapOn: "15000"
- eraseText
- inputText: "17000"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- tapOn: "Ubah Siklus"
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- stopApp





#REVISI




















  
  

  





  


