appId: tech.jala.android.lite
name: AT22
tags:
  - AT22
---
- clearState
- launchApp

## [CREATE]
# 1. Login akun jala.automationa
- runFlow: login_email.yaml



#Bugfix
- tapOn:
    text: "Lite"
    repeat: 3
    delay: 5000





# 2. Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 5000 # ms




#########################
- waitForAnimationToEnd:
    timeout: 5000
#########################




# 3. Pilih field Tambak = "Test Automation"
- tapOn: 
    point: 306, 218 #Pilih field tambak
- tapOn: "Test Automation"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 288, 414

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: 
    point: 566, 79

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"

- tapOn: "Pengaturan Siklus"
- scrollUntilVisible:
    element:
      text: "Hapus"
    direction: DOWN # DOWN|UP|LEFT|RIGHT (optional, default: DOWN)
  
- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 2000
    label: "Memproses step selanjutnya"

- tapOn: "Ya, Saya Yakin"

- tapOn: 
    text: "DELAY(IGNORE THIS)"
    optional: true
    repeat: 3
    delay: 5000
    label: "Memproses step selanjutnya"
    
- stopApp





#REVISI




















  
  

  





  


