appId: tech.jala.android.lite
name: AT13
tags:
  - AT13
---
- clearState
- runFlow: AT12-read_tambak.yaml
- clearState
- launchApp



# Login akun jala.automation
- runFlow: login_email.yaml
- waitForAnimationToEnd:
    timeout: 20000
- extendedWaitUntil:
    visible: 
        text: "Kolam" # or any other selector
    timeout: 10000
# Pilih menu [Kolam]
- tapOn: 
    text: "Lite"
    repeat: 3
    delay: 5000
# Pilih menu [Kolam]
- tapOn: 
    point: 238, 689 #Kolam
    waitToSettleTimeoutMs: 5000 # ms
    delay: 5000
- waitForAnimationToEnd:
    timeout: 20000
- extendedWaitUntil:
    visible: 
        text: "Kolam" # or any other selector~
    timeout: 10000
- tapOn: 
    text: "Tambak"
    repeat: 2
    delay: 2000 #Ngakalin

- tapOn: 
    point: 306, 218 #Pilih field tambak

- tapOn: 
    text: "Test Automation"
    delay: 3000

- waitForAnimationToEnd:
    timeout: 5000

# Pilih icon Gear pada pojok kanan atas
- tapOn:
    point: 573, 81 

- waitForAnimationToEnd:
    timeout: 5000
# Ubah field 'Luas' = "10000"
- tapOn:
    point: 279, 334 #Tap Field Luas
- eraseText
- inputText: "10000"

# Ubah field Provinsi = "Jawa Tengah"
- tapOn:
    text: "DI YOGYAKARTA"
    label: "Ubah Field Provinsi"
- tapOn: "Jawa Tengah"
# Ubah field 'Kabupaten' = "Cilacap"
- tapOn: "Pilih kota/kabupaten"
- tapOn: "CILACAP"
# Ubah field 'Kecamatan' = "Wanareja"
- tapOn: "Pilih kecamatan"
- tapOn: "cari"
- inputText: "Wana"
- tapOn: 
    text: "WANAREJA"
    retryTapIfNoChange: false

# Ubah field 'Kelurahan' = "Tambaksari"
- tapOn: 
    text: "Kelurahan"
    label: Pilih Kelurahan
    retryTapIfNoChange: false
- tapOn: 
    text: "TAMBAKSARI"
    label: "Pilih Kelurahan Tambaksari"
    retryTapIfNoChange: false

- tapOn: ##NGAKALIN
    text: "Pengaturan Tambak"
    repeat: 2
    delay: 200
# Pilih tombol [Simpan]
- tapOn: 
    text: "Simpan"
    retryTapIfNoChange: false

## ASSERT DATA EDIT
- assertVisible: "Kembali ke Menu Utama"

- stopApp
#REVISI
  

  





  


