appId: tech.jala.android.lite
name: AT5
tags:
  - AT5
---
- clearState
- launchApp

- runFlow: AT2-login_menggunakan_email.yaml

- tapOn:
    point: 545, 1155
    label: "Tap pada Akun"

- scrollUntilVisible:
    element: 
      text: "Keluar"
    direction: down

- tapOn:
    text: "Keluar"

- tapOn:
    text: "Keluar"

- extendedWaitUntil:
    visible: "Masuk"
    timeout: 10000
    label: "Redirect ke Halaman Login"


#Assert Visible
- assertVisible:
    text: "Selamat Datang di JALA"
- assertVisible:
    text: "Masuk"

- stopApp

#REVISI



